corpus/attributes-bool-single.txt
================================================================================
Attribute - Boolean - Single 
================================================================================
-- p
-- autofocus

delta echo


--------------------------------------------------------------------------------

(source_file
  (p_section
    (section_dashes)
    (single_space)
    (p_section_token)
    (newline)
    (attr_bool
      (attr_dashes)
      (nb_whitespace)
      (attr_bool_value)
      (newline))
    (newline)
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
  (newline))))
