corpus/h1-section-basic.txt
================================================================================
H1 Section - Multi-line
================================================================================
-- h1
 
Multi line Example

Alfa bravo


--------------------------------------------------------------------------------

(source_file
  (h1_section
    (section_dashes)
    (single_space)
    (h1_token)
    (newline)
    (newline)
    (headline
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (newline))
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (newline))))
