corpus/h3-section-multi-line.txt
================================================================================
H3 Section - Multi-line
================================================================================
-- h3
 
Multi line Example

Alfa bravo


--------------------------------------------------------------------------------

(source_file
  (h3_section
    (section_dashes)
    (single_space)
    (h3_token)
    (newline)
    (newline)
    (headline
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (newline))
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (newline))
    (empty_space)))
