corpus/h5-section-multi-line.txt
================================================================================
H3 Section - Multi-line
================================================================================
-- h5
 
Multi line Example

Alfa bravo


--------------------------------------------------------------------------------

(source_file
  (h5_section
    (section_dashes)
    (single_space)
    (h5_token)
    (newline)
    (newline)
    (headline
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (newline))
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (newline))
    (empty_space)))
