corpus/p-section-basic.txt
================================================================================
SOLO Paragraph Section - Basic
================================================================================
-- p

alfa bravo charlie
delta echo


--------------------------------------------------------------------------------

(source_file
  (p_section
    (section_dashes)
    (single_space)
    (p_token)
    (newline)
    (newline)
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
  (newline))))
