corpus/p-section-multiple-paragraphs.txt
================================================================================
Paragraph Section - Multiple Paragraphs 
================================================================================
-- p

foxtrot hotel

sierra kilo


--------------------------------------------------------------------------------

(source_file
  (p_section
    (section_dashes)
    (p_section_token)
    (newline)
    (newline)
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (wordbreak
        (nb_whitespace))
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (wordbreak
        (newline))
      (newline))
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (wordbreak
        (nb_whitespace))
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (wordbreak
        (newline))
      (newline))))
