corpus/ref-section-basic.txt
================================================================================
Ref Section - Basic
================================================================================
-- ref

alfa bravo charlie
delta echo


--------------------------------------------------------------------------------

(source_file
  (ref_section
    (section_dashes)
    (single_space)
    (ref_token)
    (newline)
    (newline)
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (nb_whitespace)
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (newline)
      (newline))))
