corpus/title-section-multi-line.txt
================================================================================
Title Section - Multi-line
================================================================================
-- title
 
Multi line Example

Alfa bravo


--------------------------------------------------------------------------------

(source_file
  (title_section
    (dashes)
    (title_section_token)
    (newline)
    (newline)
    (headline
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (wordbreak
        (whitespace))
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (wordbreak
        (whitespace))
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (wordbreak
        (newline))
      (newline))
    (paragraph
      (paragraph_first_word
        (non_lt_char)
        (following_word_chars))
      (wordbreak
        (whitespace))
      (word
        (initial_word_chars
          (non_lt_char))
        (following_word_chars))
      (wordbreak
        (newline))
      (newline))))
